--- a/proxy/Makefile.am
+++ b/proxy/Makefile.am
@@ -3,17 +3,17 @@
 if WITH_PROXY
 INCLUDES = -I$(top_srcdir)/gnulib/lib -I../gnulib/lib \
            -I$(top_builddir)/include -I@top_srcdir@/include \
-	   -I@top_srcdir@/proxy -I@top_srcdir@/src @LIBXML_CFLAGS@ \
+	   -I@top_srcdir@/proxy -I@top_srcdir@/src -I@top_srcdir@/src/xen @LIBXML_CFLAGS@ \
 	   -DPROXY  -DLOCALEBASEDIR=\""$(datadir)/locale"\" \
            -DGETTEXT_PACKAGE=\"$(PACKAGE)\" $(WARN_CFLAGS) $(XEN_CFLAGS)
 
 libexec_PROGRAMS = libvirt_proxy
 
-libvirt_proxy_SOURCES = libvirt_proxy.c @top_srcdir@/src/xend_internal.c \
-	    @top_srcdir@/src/xen_internal.c @top_srcdir@/src/virterror.c \
-	    @top_srcdir@/src/sexpr.c  \
+libvirt_proxy_SOURCES = libvirt_proxy.c @top_srcdir@/src/xen/xend_internal.c \
+	    @top_srcdir@/src/xen/xen_hypervisor.c @top_srcdir@/src/virterror.c \
+	    @top_srcdir@/src/xen/sexpr.c  \
 	    @top_srcdir@/src/threads.c  \
-            @top_srcdir@/src/xs_internal.c @top_srcdir@/src/buf.c \
+            @top_srcdir@/src/xen/xs_internal.c @top_srcdir@/src/buf.c \
             @top_srcdir@/src/capabilities.c \
             @top_srcdir@/src/memory.c \
             @top_srcdir@/src/storage_encryption_conf.c \
