Move UML driver to src/uml/
* src/uml_conf.c, src/uml_conf.h, src/uml_driver.c,
  src/uml_driver.h: Move to src/uml/
* daemon/qemud.c, src/Makefile.am: Adjust for changed paths

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -157,8 +157,8 @@ QEMU_DRIVER_SOURCES =						\
 		cgroup.c cgroup.h
 
 UML_DRIVER_SOURCES =						\
-		uml_conf.c uml_conf.h				\
-		uml_driver.c uml_driver.h
+		uml/uml_conf.c uml/uml_conf.h			\
+		uml/uml_driver.c uml/uml_driver.h
 
 ONE_DRIVER_SOURCES =						\
 		./opennebula/one_conf.c				\
