Move OpenVZ driver to src/openvz/
* src/openvz_conf.c, src/openvz_conf.h, src/openvz_driver.c,
  src/openvz_driver.h: Move to src/openvz/
* src/Makefile.am, src/libvirt.c: Adjust for changed paths

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -140,8 +140,8 @@ PHYP_DRIVER_SOURCES =						\
 		phyp/phyp_driver.c phyp/phyp_driver.h
 
 OPENVZ_DRIVER_SOURCES =						\
-		openvz_conf.c openvz_conf.h			\
-		openvz_driver.c openvz_driver.h
+		openvz/openvz_conf.c openvz/openvz_conf.h	\
+		openvz/openvz_driver.c openvz/openvz_driver.h
 
 VBOX_DRIVER_SOURCES =						\
         vbox/vbox_XPCOMCGlue.c vbox/vbox_XPCOMCGlue.h		\
