Move test driver into src/test/
* src/Makefile.am, src/libvirt.c: Adjust for changed paths
* src/test.c: Rename to src/test/test_driver.c,
* src/test.h: Rename to src/test/test_driver.h

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -104,7 +104,7 @@ REMOTE_DRIVER_SOURCES =						\
 
 # Mock driver, covering domains, storage, networks, etc
 TEST_DRIVER_SOURCES =						\
-		test.c test.h
+		test/test_driver.c test/test_driver.h
 
 
 
