Move netcf interface driver into src/interface/
* daemon/qemud.c, src/Makefile.am: Adapt for changed paths
* src/interface_driver.c: Rename to src/interface/netcf_driver.c
* src/interface_driver.h: Rename to src/interface/netcf_driver.h

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -180,7 +180,7 @@ NETWORK_DRIVER_SOURCES =					\
 		network/bridge_driver.h network/bridge_driver.c
 
 INTERFACE_DRIVER_SOURCES =					\
-		interface_driver.h interface_driver.c
+		interface/netcf_driver.h interface/netcf_driver.c
 
 SECRET_DRIVER_SOURCES =						\
 		secret_driver.h secret_driver.c
