Move security drivers to src/security/
* src/Makefile.am, src/qemu/qemu_conf.h, src/qemu/qemu_driver.c,
  tests/seclabeltest.c: Adapt for changed paths
* src/security.c: Rename to src/security/security_driver.c
* src/security.h: Rename to src/security/security_driver.h
* src/security_selinux.c, src/security_selinux.h: Move to src/security/

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -219,10 +219,10 @@ STORAGE_HELPER_DISK_SOURCES =					\
 
 # Security framework and drivers for various models
 SECURITY_DRIVER_SOURCES =					\
-		security.h security.c
+		security/security_driver.h security/security_driver.c
 
 SECURITY_DRIVER_SELINUX_SOURCES =				\
-		security_selinux.h security_selinux.c
+		security/security_selinux.h security/security_selinux.c
 
 
 NODE_DEVICE_DRIVER_SOURCES =					\
