Rename daemon main code
* daemon/qemud.c: Rename to daemon/libvirtd.c
* daemon/qemud.h: Rename to daemon/libvirtd.h
* daemon/Makefile.am, daemon/dispatch.h, daemon/mdns.c,
  daemon/remote.h: Update for renamed libvirtd.h file

--- a/daemon/Makefile.am
+++ b/daemon/Makefile.am
@@ -2,7 +2,7 @@
 
 DAEMON_SOURCES =					\
 		event.c event.h				\
-		qemud.c qemud.h				\
+		libvirtd.c libvirtd.h			\
 		remote.c remote.h			\
 		dispatch.c dispatch.h			\
 		remote_dispatch_prototypes.h		\
