--- a/tools/virt-pki-validate.in
+++ b/tools/virt-pki-validate.in
@@ -25,7 +25,7 @@ echo Found $CERTOOL
 #
 # Check the directory structure
 #
-PKI="/etc/pki"
+PKI="$(SYSCONFDIR)/pki"
 if [ ! -d $PKI ]
 then
     echo the $PKI directory is missing, it is usually
@@ -240,21 +240,74 @@ fi
 
 if [ "$SERVER" = "1" ]
 then
-    if [ -r /etc/sysconfig/libvirtd ]
+    if [ -r $(SYSCONFDIR)/sysconfig/libvirtd ]
     then
-        if [ "`grep '^LIBVIRTD_ARGS' /etc/sysconfig/libvirtd | grep -- '--listen'`" = "" ]
+        if [ "`grep '^LIBVIRTD_ARGS' $(SYSCONFDIR)/sysconfig/libvirtd | grep -- '--listen'`" = "" ]
 	then
-	    echo Make sure /etc/sysconfig/libvirtd is setup to listen to
+	    echo Make sure $(SYSCONFDIR)/sysconfig/libvirtd is setup to listen to
 	    echo TCP/IP connections and restart the libvirtd service
 	fi
     fi
-    if [ -r /etc/sysconfig/iptables ]
+    if [ -r $(SYSCONFDIR)/sysconfig/iptables ]
     then
-        if [ "`grep $PORT /etc/sysconfig/iptables`" = "" ]
+        if [ "`grep $PORT $(SYSCONFDIR)/sysconfig/iptables`" = "" ]
 	then
-	    echo Make sure /etc/sysconfig/iptables is setup to allow
+	    echo Make sure $(SYSCONFDIR)/sysconfig/iptables is setup to allow
 	    echo incoming TCP/IP connections on port $PORT and
 	    echo restart the iptables service
 	fi
     fi
 fi
+
+
+exit 0
+
+: <<=cut
+=pod
+
+=head1 NAME
+
+  virt-pki-validate - validate libvirt PKI files are configured correctly
+
+=head1 SYNOPSIS
+
+  virt-pki-validate
+
+=head1 DESCRIPTION
+
+This tool validates that the neccessary PKI files are configured for
+a secure libvirt server or client using the TLS encryption protocol.
+It will report any missing certificate or key files on the host. It
+should be run as root to ensure it can read all the neccessary files
+
+=head1 EXIT STATUS
+
+Upon successful validation, an exit status of 0 will be set. Upon
+failure a non-zero status will be set.
+
+=head1 AUTHOR
+
+Richard Jones
+
+=head1 BUGS
+
+Report any bugs discovered to the libvirt community via the
+mailing list C<http://libvirt.org/contact.html> or bug tracker C<http://libvirt.org/bugs.html>.
+Alternatively report bugs to your software distributor / vendor.
+
+=head1 COPYRIGHT
+
+Copyright 2006-2009 by Red Hat, Inc
+
+=head1 LICENSE
+
+virt-pki-validate is distributed under the terms of the GNU GPL v2+.
+This is free software; see the source for copying conditions. There
+is NO warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR
+PURPOSE
+
+=head1 SEE ALSO
+
+C<virsh(1)>, online PKI setup instructions C<http://libvirt.org/remote.html>
+
+=cut
