--- a/proxy/Makefile.am
+++ b/proxy/Makefile.am
@@ -3,7 +3,10 @@
 if WITH_PROXY
 INCLUDES = -I$(top_srcdir)/gnulib/lib -I../gnulib/lib \
            -I$(top_builddir)/include -I@top_srcdir@/include \
-	   -I@top_srcdir@/proxy -I@top_srcdir@/src -I@top_srcdir@/src/xen @LIBXML_CFLAGS@ \
+	   -I@top_srcdir@/proxy -I@top_srcdir@/src \
+           -I@top_srcdir@/src/conf \
+           -I@top_srcdir@/src/xen \
+           @LIBXML_CFLAGS@ \
 	   -DPROXY  -DLOCALEBASEDIR=\""$(datadir)/locale"\" \
            -DGETTEXT_PACKAGE=\"$(PACKAGE)\" $(WARN_CFLAGS) $(XEN_CFLAGS)
 
@@ -14,10 +17,10 @@ libvirt_proxy_SOURCES = libvirt_proxy.c @top_srcdir@/src/xen/xend_internal.c \
 	    @top_srcdir@/src/xen/sexpr.c  \
 	    @top_srcdir@/src/threads.c  \
             @top_srcdir@/src/xen/xs_internal.c @top_srcdir@/src/buf.c \
-            @top_srcdir@/src/capabilities.c \
+            @top_srcdir@/src/conf/capabilities.c \
             @top_srcdir@/src/memory.c \
-            @top_srcdir@/src/storage_encryption_conf.c \
-            @top_srcdir@/src/domain_conf.c \
+            @top_srcdir@/src/conf/storage_encryption_conf.c \
+            @top_srcdir@/src/conf/domain_conf.c \
             @top_srcdir@/src/util.c \
 	    @top_srcdir@/src/event.c \
 	    @top_srcdir@/src/uuid.c \
